# mrrr

./: .gitignore  LICENSE  README.md  Turtlebot melodic install.txt
betty/: CMakeLists.txt  package.xml
betty/src/: busroute.cpp  dj.cpp  ps3_teleop.cpp  pure_pursuit.cpp  salesman.cpp  teleop.cpp  vacuum.cpp
launch/: operator.launch
mine_explorer/: package.xml
src/mine_explorer/: CMakeLists.txt  setup.py
src/mine_explorer/config/: operator.rviz
src/mine_explorer/include/explore/: explore.h
src/mine_explorer/launch/: bot.launch  operator.launch
src/mine_explorer/scripts/mine_explorer/: autopilot.py
src/mine_explorer/src/: autopilot.cpp  core.cpp  sound.cpp  teleop.cpp
src/mine_explorer/src/explore/: costmap_client.cpp  explore.cpp
